--- a/css/scooter.css
+++ b/css/scooter.css
@@ -12,9 +12,15 @@ header{
 div .bildergrid
 {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 50% 50%;
 	align-items: center;
-	grid-gap: 50px;
+	grid-gap: 0px;
+}
+.bildergrid .caption 
+{
+	background-color: rgba(4, 15, 22, 0.6);
+	grid-row: 2;
+	grid column: 1;
 }
 h1
 {
@@ -38,6 +44,9 @@ img.mitarbeiterbilder
 {
 	max-width: 250px;
 	max-height: 250px;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
 
 }
 div{
